@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST Readonly-XS-1.05.tar.gz 8849 SHA256 8ae5c4e85299e5c8bddd1b196f2eea38f00709e0dc0cb60454dc9114ae3fff0d SHA512 0e3a8e55e7776e556b7ce995510d73d8d07b51a98f3d4772c291f4c76134c395b196a0485a6ceca39acd536258da5c91cddfdf3f61ef3309c518c807bb0f4dd4 WHIRLPOOL 0d14689348cda6d53ab9d73d8b57fe694dd4ec81c3253ba57372b79e1a0296fad25371e5b4ca76ccc6c4312b1649cfd5ab0ef598454f5aea12fc0d0ba35d5e95
-EBUILD Readonly-XS-1.50.0.ebuild 527 SHA256 f1b04bdeeca083da496887eb299d6c5c90f681ac66a040bc67df2579016393b7 SHA512 f72b515f904f96efb2e13633bd7d602e7d90c2b6f65023626d9a0cb2fdc12cab3690b6087229112482fe7f8eb78f3799f5ab77f9dc6762ca8c11cd67508ea638 WHIRLPOOL 1ebdf41432707d84763979eef463a02c629a60d68656eb47c377fb0f38dbf784ea54b6fffd5fb36aa285ec8e6e44c9b3a30f92c751eb1789c96c1f8bd2cc4d8e
-MISC ChangeLog 1365 SHA256 0e426dad9732e03413ecb85f60a83afc934dfda3624bc019e69aa972cf044058 SHA512 8c61941330a8a81d0012fb4971dc3b68c0893c09fbdfe5ed37ddb22e6a25d2c2a0261fc3fad1b4c9b4853df7617256fb6159340cae8cdc170fbfe2da3667c93e WHIRLPOOL e6777b45af9cc8f524e63e3c0431c2414a0dd60f0544260656df34da2f566e6679eba49da46f68707c84974a3389ccfe8517bdb3df4ad833fece118d6f452740
+EBUILD Readonly-XS-1.50.0.ebuild 533 SHA256 d899cb4d6554ee14feae43bb7cf76d7ce785947b6ff87d3d26dcc871dfb18374 SHA512 3422560f89b4476cf662e263c7c733bcde8412a2e66fec1f68d9282cd522b5191d7637bbc5be34edeb2ece8e2fa77bcbc9d8b1254535e92a815d052432c45d0c WHIRLPOOL eeba622d3702c7707e41ea1d3fa20f5a7d66ee3e4d6e2e27606f541c3c42c2ec85c6f95803d8dbfa0edbd12f694476dd7702de55379f6f157dcd8ddadb61c9f8
+MISC ChangeLog 1480 SHA256 1049cac669bbbe97a69bb0185e54ae347254c52f2930fdf57e959de989c9ff5e SHA512 4ff8c47ffcb6b7636e5e727270bfce45e1974b84d4dd8ddea067e3164c261e05e23b46bfbbd652ff6c860bad14d4a01de74a696ae737841415a85670cc79776c WHIRLPOOL 4894a18dfe7a8169190583e6ff78e4333859e1eac87a7fae593584c3e4c717c17ab13b8cbd7c5f50edda08ae6f673fce5acd36e0e7faa0a4a65ae4e9df917145
 MISC metadata.xml 296 SHA256 bbde3f6f06d3c65a29aa028e3aa2888198469ac9a026df49a642c2dfc227e28f SHA512 32cfd05e55fa00a7f5a37364cc9e23734e9ba7a1c61467346767c4dd1b4c75077461112498452f2b0438f6d92a1c5f889e099f9cfe939815b26f745993ff4e63 WHIRLPOOL 5eac40e7df7480418038d89b3fb54cedfd162631d11bcf5ee3b619146f2bd46544fb3099fbe3c2cf502a85d6c0930657c96df0615c32247eedbc29c5da237413
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlJRqmMACgkQG9wOWsQutdYtuwP+Li6/Wzn76mCBoeOdPsNdS0mg
-Ea8F0VIeL1qef1Rn7ekHUDmM3lZGP6kV/OrxKu8LWcjSqOhl2EnpHuyQOjrUjH2p
-r66/46z/WFzgoPOAfATlcfj4hS8mtK467PaiCeJRiqaKZansItdgh9dh4RwaP3jw
-cnH84uZ0zEk5fBjSbUY=
-=EUiU
+iQEcBAEBCAAGBQJSUnlyAAoJECo/aRed9267XkQIAI98W/T7D6SiSKhhzSavk8CI
+qerLvEyqbxvqm3tFnHkLQnIvijF5Jd6Rb3Zlr18Yf5Psw6wPMTEW/2ibheBFnU7L
+VI1w+931w3mds1wEDihnj7hKz3DC5hcVKnz33HjXsuJel1kKaP5ukvn04/PvG4Yg
+uxXhEoVickqBHCgGowWOBlw6s9h91z5awZGR1LULtiPJ8qvNv9crJ4A/XXNZ44ai
+TuqCP9k03lLB87yRBSIctPeoAF7eWF7SIQOZcxSEmXQqVKONChbPBbfoaXAlg4wy
+wconmWiVYyxAvY+ZooVFqaCdL5JTrVbu6+6fkIc6faNYlZhUxVxkhfDibTYiMgA=
+=Ofh8
 -----END PGP SIGNATURE-----
