@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST Readonly-1.03.tar.gz 13677 SHA256 53c46815dea724e29ceabb5d39471b0e6f2ebbb3cf1fe2a23d881a2855f713ea SHA512 0655a37828f70058f136218d11f9c12c91eb9f365b4e9c7c2c6e22c5ec469a1bbd8196c40c17db09a26a3260e638148570c3859541d840348b6d9ddf3890e5c1 WHIRLPOOL e512f91f438e2622cf8495d11b556a185a96a6fee51a30d04fe1ceaf08397c4f167ac7f51525ee8c796251ee2b7cc9a0f9e59a7ccc9ada4d06f37a197f7f9875
-EBUILD Readonly-1.30.0.ebuild 510 SHA256 9a0aebbe05d712b4397ac3adb7d4828356e4d7789086517cd40721c2898d95da SHA512 a913560216a15d4c48c97289a48d5232768282643b53bda316cdc7f32b87ee1c87c44a6116407d99a29e463971c612d2ceb2c5605fa6b2e1941e555869b02d55 WHIRLPOOL ad7652f680ac7290a37de06f52abb35c22136bfba76bf11c513b85aaa15e525e5c7ff633c0e5e7255547881414431016834d103dfe0ac9512af14c60472ea104
-MISC ChangeLog 2020 SHA256 ffeb056f962a95316fd062f1dc12a1131a03a2f89af5546aef45db1414e796ca SHA512 6862cf570558a99ee78f5cc6e76d0d9681a43eaf81c90ecb67ab13c14732b35f885a168569c476850bc11e047c30b10a74366d395ad6d9c870ed374ef5615aec WHIRLPOOL aea600a366dc357595575222a44633c3ec1fd6e328cf4abb980d9bc916629285593b198a0d510eda931b9ed6945a10b4b1f86ae95011a128892634a37ea18efe
+EBUILD Readonly-1.30.0.ebuild 516 SHA256 2b58202f51ade6856d7ec65a8ed57cf341986b81368de2724ac9a2fb56c3e8fd SHA512 cd5c2a974c4fdddaa578e6e109830045658d114a3d0e93a24c5a9cdecdd85922ec91d89a8abb330c4abe1fbbf8cd2c4432ac4836070d4dbff4ab57f494e2b787 WHIRLPOOL a81d2e86924ae6150a73fc8bb3c1307e3c6cd41927eee0ce146ebf61f47d472a9e7ec7bc5a7791404b622b3a0692ac17e1234c137f1f839e69ef0eeeeee284d1
+MISC ChangeLog 2132 SHA256 2e825d3cc3cba2f1eece96d0ddb8ac0cf803e1732f482df17f6a3a5c45f12ade SHA512 7a56d1c211c2160453703b7c9aa87d076cf9f5b525ea62600a8088dc1053b96a4f01352bcf79e085755a5c5f6e0c5f2dc39c5f10c1762e071db492839b7274c7 WHIRLPOOL e5c1aea9abc5d7edb44efea610da59142f358f78202a1b9b337051f320270da2457d3c4e57c230d5c69515249c9ca471711048af639165ee6d95883958ba7072
 MISC metadata.xml 475 SHA256 e0c3bebc8151fc39cc561c92c362775129d37506b2dd67257ce7c3fc5a5a281c SHA512 7e55a0dfdeac325df81016f574df53f981b5305b95f37099c17820d654799cb98756ec05880bd656007779cd7b332dc349198e5654a9999f0c44d50826b387bd WHIRLPOOL 80c0dbd9eb6bcdb0dd43a7d83d1d689e60eb1fccbe5323eff354efb336969c0d4a3a75a93232e3af8fbf40dc62aa3847c09351b40322b9666957be66761b7abf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlJRqi4ACgkQG9wOWsQutdb9QAP/dzqE6fE0wWfnJ2bai4KMVpOI
-6UD053GXx9brWnLD9tJWsl/x5eFN+d4jjYgcBYr9VlTsqqR7qAssiw8AstnDMU2m
-OGvbHKLCf/hYfa5lB2E9AXuFQLVtFR2gQlWtiRYLXvNSHdLWDY9Qh2hDKTDMppon
-ccUvqdZFStuVFYhHiso=
-=LfaH
+iQEcBAEBCAAGBQJSUnlLAAoJECo/aRed9267cbsIAIllji3x1KyArdgyIctOasKw
+x1oDYmEoY4ZuoJUrcAl778gGpjkVKW1r/96ifenqRVLO+vb6H530jsgU8N4KcrMB
+axKYKTdfq2fpoUTTreUbvbnR+A9ktpaNpkY1/QLbvoHNTSOhGff+ftZqUzvWjLqj
+ON8DeyAf080IH1k1LR5NvtI23lwcTf3oGY1Q+MjtOQeufGiLTbPuG7aYUb3xkro3
+Cee/LxcQZ7kJGrxqnvO3gayfNOeu0986H9ufTBvqoJIs7sGKp8yjNnniu/NsOKGP
+pyfYjbHRZaCGZqpkXldCiydoqpRSSXngGiGOOOuZ4raVFxP2zJcBOi0kxSa8NCo=
+=xUoZ
 -----END PGP SIGNATURE-----
