@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Readonly
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Readonly/ChangeLog,v 1.17 2013/10/06 18:18:19 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Readonly/ChangeLog,v 1.18 2013/10/07 09:05:58 pinkbyte Exp $
+
+  07 Oct 2013; Sergey Popov <pinkbyte@gentoo.org> Readonly-1.30.0.ebuild:
+  Add ~arm keyword, wrt bug #484458
 
   06 Oct 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-1.30.0.ebuild:
   added ~ppc64 keyword wrt bug #484458
